# railway-device

./: CMakeLists.txt  Device 3D Model.f3z  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.c  neopixel.c  neopixel.h  sdcard.c  sdcard.h  state.c  state.h  status.c  status.h  storage.c  storage.h  writeBuffer.c  writeBuffer.h
main/accelerometer/: accelerometer.c  accelerometer.h  calibration.c  calibration.h  communication.c  communication.h  dataRate.c  dataRate.h  interrupt.c  measurement.c  measurement.h  offset.h  queue.c  queue.h
main/bt/: connection.c  connection.h
main/bt/characteristics/: battery.c  battery.h  batteryState.h  calibrate.c  calibrate.h  currentstate.c  currentstate.h  recordingid.c  recordingid.h  samples.c  samples.h  time.c  time.h
