idf_component_register(SRCS "main.c" "sdcard.c" "neopixel.c" "status.c" "state.c" "storage.c" "bt/connection.c" "bt/characteristics/time.c" "bt/characteristics/calibrate.c" "bt/characteristics/recordingId.c" "bt/characteristics/currentstate.c" "accelerometer/accelerometer.c" "accelerometer/dataRate.c" "accelerometer/communication.c" "accelerometer/datarate.c" "accelerometer/calibration.c" "accelerometer/measurement.c" "accelerometer/queue.c"
                    INCLUDE_DIRS ".")
